fix(admin/components/admin-page): remove menu paddings to unify scrollbars

--- a/src/app/pages/admin/components/admin-page/admin-page.component.scss
+++ b/src/app/pages/admin/components/admin-page/admin-page.component.scss
@@ -10,8 +10,6 @@
 }
 
 .side-menu {
-  padding: 1rem;
-
   ::ng-deep .mat-drawer-inner-container {
     display: flex;
     flex-direction: column;
